package com.vci.vectorcamapp.imaging.presentation.util

object ImagingTestTags {
    const val SCREEN = "imaging_screen"
    const val PAGER = "imaging_pager"

    const val CAMERA_PREVIEW = "imaging_camera_preview"
    const val BUTTON_CAPTURE = "imaging_button_capture"
    const val BUTTON_EXIT = "imaging_button_exit"

    const val BUTTON_RETAKE = "imaging_button_retake"
    const val BUTTON_SAVE_TO_SESSION = "imaging_button_save_to_session"

    const val EXIT_DIALOG = "imaging_exit_dialog"
    const val EXIT_SELECT_SUBMIT = "imaging_exit_select_submit"
    const val EXIT_SELECT_SAVE = "imaging_exit_select_save"
    const val EXIT_CONFIRM = "imaging_exit_confirm"
    const val EXIT_BACK = "imaging_exit_back"

    const val MANUAL_FOCUS_RING = "imaging_autofocus_ring"

    const val CAPTURED_SPECIMEN_TEXT_FIELD_SPECIMEN_ID = "imaging_text_field_specimen_id"
    const val CAPTURED_SPECIMEN_PILL_CORRECT_ID_WARNING = "imaging_pill_correct_id_warning"

    const val SPECIMEN_CAPTURED_SPECIMEN_TILE = "imaging_captured_specimen_tile"
    const val SPECIMEN_BADGE_IMAGE_INDEX = "imaging_badge_image_index"
}