...
    <string name="imaging_body_practice_warning">Practice Session: Data will not be tracked.</string>

    <!-- Labels -->
    <string name="imaging_label_specimen_of_total">Specimen %1$d of %2$d</string>
    <string name="imaging_label_image_badge">%1$d of %2$d</string>
    <string name="imaging_label_specimen_number">Specimen %1$d</string>
    <string name="imaging_label_specimen_id">Specimen ID</string>
    <string name="imaging_label_specimen_id_value">Specimen ID: %1$s</string>
    <string name="imaging_label_species">Species: %1$s</string>
    <string name="imaging_label_sex">Sex: %1$s</string>
    <string name="imaging_label_abdomen_status">Abdomen Status: %1$s</string>
    <string name="imaging_label_captured_at">Captured At: %1$s</string>
    <string name="imaging_label_packaging_confirmation">I have packaged this specimen for further processing</string>
    <string name="imaging_label_run_inference">Run Model Inference</string>
    <string name="imaging_label_specimen_id_placeholder">Specimen ID will appear here</string>
    <string name="imaging_label_pack_for_processing">Pack this specimen for further processing</string>
    <string name="imaging_label_bounding_box">specimen %1$s</string>

    <!-- Actions -->
    <string name="imaging_action_exit_dialog_submit">Submit</string>
    <string name="imaging_action_exit_dialog_confirm">Yes, Confirm</string>
...
